k8s/API/nagp-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagp-api
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: nagp-api
  template:
    metadata:
      labels:
        app: nagp-api
    spec:
      containers:
      - name: nagp-api
        image: brijdocker88/nagp-api:v1
        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "50m"
            memory: "32Mi"
          limits:
            cpu: "200m"
            memory: "64Mi"
