k8s/API/nagp-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagp-api
spec:
  selector:
    app: nagp-api
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
