k8s/API/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nagp-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nagp-api
            port:
              number: 80
